<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingTop="25dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/time_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                app:fontFamily="sans-serif-black"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_slogan"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:fontFamily="sans-serif" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/text_input_border"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/text_input_border"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="8dp" />


        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button1"
            android:text="@string/signin_button_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:text="Login with Facebook"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/signin_goto_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button2"
        android:padding="12dp"
        android:text="@string/goto_signup_screen_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</RelativeLayout>