<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/gradient"
    android:paddingTop="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/time_logo"/>
        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                app:fontFamily="sans-serif-black"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_slogan"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:fontFamily="sans-serif"
                />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:background="@drawable/text_input_border"
            android:padding="8dp"
            android:hint="@string/hint_name"/>

        <EditText
            android:id="@+id/signup_email"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_input_border"
            android:padding="8dp"
            android:hint="@string/hint_email"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:background="@drawable/text_input_border"
                    android:padding="6dp"
                    android:hint="@string/hint_password"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_warning"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/signup_retype_password"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:background="@drawable/text_input_border"
                    android:padding="6dp"
                    android:hint="@string/hint_retype_password"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_warning"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="14dp"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="18dp">
            <CheckBox
                android:id="@+id/signup_agreement_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/signup_agreement_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_link_text"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"

                />
        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button1"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <Button
        android:id="@+id/signup_goto_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="Already have an account? Login!"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

</RelativeLayout>